--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.4.0",
     "axios": "^0.25.0",
     "next": "12.0.8",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
