--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"keyword": "next.js",
 	"author": "Mihails Fjodorovs <mf.mail.service@gmail.com>",
 	"dependencies": {
+		"@apollo/client": "^3.5.10",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@mui/material": "^5.4.0",
 		"axios": "^0.25.0",
+		"graphql": "^16.3.0",
 		"next": "12.0.8",
 		"next-pwa": "^5.4.4",
 		"react": "17.0.2",
