--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@mui/material": "^5.4.0",
-		"@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
+		"@next-auth/mongodb-adapter": "^1.0.3",
 		"axios": "^0.25.0",
-		"firebase": "^9.6.10",
 		"graphql": "^16.3.0",
+		"mongodb": "^4.4.1",
 		"next": "12.0.8",
 		"next-auth": "^4.3.1",
 		"next-pwa": "^5.4.4",
