--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
 		"sharp": "^0.29.3"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.7",
 		"eslint": "8.7.0",
-		"eslint-config-next": "12.0.8"
+		"eslint-config-next": "12.0.8",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.3"
 	}
 }
