--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"next-auth": "^4.3.1",
 		"next-pwa": "^5.4.4",
 		"nodemailer": "^6.7.3",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"sass": "^1.49.0",
 		"sharp": "^0.29.3"
 	},
