--- a/package.json
+++ b/package.json
@@ -1,42 +1,55 @@
 {
-	"name": "mihails_fjodorovs_portfolio_page",
-	"description": "This is Mihails Fjodorovs portfolio page.",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"version": "auto-changelog -p && git add CHANGELOG.md"
-	},
-	"keyword": "next.js",
-	"author": "Mihails Fjodorovs <mf.mail.service@gmail.com>",
-	"dependencies": {
-		"@apollo/client": "^3.5.10",
-		"@contentful/rich-text-react-renderer": "^15.12.1",
-		"@next-auth/mongodb-adapter": "^1.0.3",
-		"axios": "^0.25.0",
-		"contentful": "^9.1.34",
-		"daisyui": "^2.19.0",
-		"graphql": "^16.3.0",
-		"mongodb": "^4.4.1",
-		"next": "12.3.0",
-		"next-auth": "^4.12.0",
-		"next-pwa": "^5.4.4",
-		"nodemailer": "^6.7.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"sass": "^1.49.0",
-		"sharp": "^0.29.3"
-	},
-	"devDependencies": {
-		"@next/bundle-analyzer": "^12.3.1",
-		"auto-changelog": "^2.4.0",
-		"autoprefixer": "^10.4.7",
-		"eslint": "8.7.0",
-		"eslint-config-next": "12.0.8",
-		"postcss": "^8.4.14",
-		"tailwindcss": "^3.1.3"
-	},
-	"version": "2.0.11"
+    "name": "mihails_fjodorovs_portfolio_page",
+    "description": "This is Mihails Fjodorovs portfolio page.",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier-check": "prettier --check .",
+        "prettier-fix": "prettier --write .",
+        "version": "auto-changelog -p && git add CHANGELOG.md"
+    },
+    "pre-commit": [
+        "lint",
+        "prettier-check"
+    ],
+    "keyword": "next.js",
+    "author": "Mihails Fjodorovs <mf.mail.service@gmail.com>",
+    "dependencies": {
+        "@apollo/client": "^3.5.10",
+        "@contentful/rich-text-react-renderer": "^15.12.1",
+        "@next-auth/mongodb-adapter": "^1.0.3",
+        "axios": "^0.25.0",
+        "contentful": "^9.1.34",
+        "daisyui": "^2.19.0",
+        "graphql": "^16.3.0",
+        "mongodb": "^4.4.1",
+        "next": "12.3.0",
+        "next-auth": "^4.12.0",
+        "next-pwa": "^5.4.4",
+        "nodemailer": "^6.7.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.49.0",
+        "sharp": "^0.29.3"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.19.1",
+        "@next/bundle-analyzer": "^12.3.1",
+        "@next/eslint-plugin-next": "^12.3.1",
+        "auto-changelog": "^2.4.0",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.7.0",
+        "eslint-config-next": "12.0.8",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.8",
+        "postcss": "^8.4.14",
+        "pre-commit": "^1.2.2",
+        "prettier": "^2.7.1",
+        "tailwindcss": "^3.1.3"
+    },
+    "version": "2.0.11"
 }
