--- a/.prettierignore
+++ b/.prettierignore
@@ -26,3 +26,6 @@ bench/nested-deps/pages/**/*
 bench/nested-deps/components/**/*
 pnpm-lock.yaml
 **/convex/_generated/**
+
+public/sw.js
+public/workbox*.js
