--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@apollo/client": "^3.5.10",
         "@contentful/rich-text-react-renderer": "^15.12.1",
+        "@icons-pack/react-simple-icons": "^5.8.0",
         "@next-auth/mongodb-adapter": "^1.0.3",
         "axios": "^0.25.0",
         "contentful": "^9.1.34",
