--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,17 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "importOrder": [
+        "^(next/(.*)$)|^(next$)",
+        "<THIRD_PARTY_MODULES>",
+        "next-seo.config",
+        "^components/(.*)$",
+        "^utils/(.*)$",
+        "^assets/(.*)$",
+        "^@fontsource/(.*)$",
+        "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
 }
