--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@babel/eslint-parser": "^7.19.1",
         "@next/bundle-analyzer": "^12.3.1",
         "@next/eslint-plugin-next": "^12.3.1",
+        "@trivago/prettier-plugin-sort-imports": "^3.3.0",
         "auto-changelog": "^2.4.0",
         "autoprefixer": "^10.4.7",
         "eslint": "8.7.0",
