--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "@contentful/rich-text-react-renderer": "^15.12.1",
         "@icons-pack/react-simple-icons": "^5.8.0",
         "@next-auth/mongodb-adapter": "^1.0.3",
+        "@prisma/client": "^4.5.0",
+        "apollo-server": "^3.10.4",
+        "apollo-server-micro": "^3.10.4",
         "axios": "^0.25.0",
         "contentful": "^9.1.34",
         "daisyui": "^2.19.0",
@@ -51,6 +54,7 @@
         "postcss": "^8.4.14",
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
+        "prisma": "^4.5.0",
         "tailwindcss": "^3.1.3"
     },
     "version": "2.4.19"
