feat: add Prisma.
Prisma is integrated to serve as Apollo Server data source.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "prisma:generate": "npx prisma generate",
+        "prisma:migrate": "prisma db push",
+        "prisma:studio": "npx prisma studio",
         "lint": "next lint",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
@@ -23,12 +27,12 @@
         "@icons-pack/react-simple-icons": "^5.8.0",
         "@next-auth/mongodb-adapter": "^1.0.3",
         "@prisma/client": "^4.5.0",
-        "apollo-server": "^3.10.4",
         "apollo-server-micro": "^3.10.4",
         "axios": "^0.25.0",
         "contentful": "^9.1.34",
         "daisyui": "^2.19.0",
         "graphql": "^16.3.0",
+        "micro": "^9.4.1",
         "mongodb": "^4.4.1",
         "next": "12.3.0",
         "next-auth": "^4.12.0",
