--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "vercel-build": "prisma generate && prisma db push deploy && next build",
         "prisma:generate": "npx prisma generate",
         "prisma:migrate": "prisma db push",
         "prisma:studio": "npx prisma studio",
