--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "prisma:migrate": "prisma db push",
         "prisma:studio": "npx prisma studio",
         "lint": "next lint",
+        "lint:style": "NODE_ENV=production stylelint './**/*.[s]css'",
+        "lint:style:fix": "yarn run lint:style --fix",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
         "version": "auto-changelog -p && git add CHANGELOG.md"
@@ -59,6 +61,11 @@
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "prisma": "^4.5.0",
+        "stylelint": "^14.14.1",
+        "stylelint-config-css-modules": "^4.1.0",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-standard": "^29.0.0",
+        "stylelint-config-standard-scss": "^6.1.0",
         "tailwindcss": "^3.1.3"
     },
     "version": "2.8.23"
