--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "yarn partytown && next build",
         "start": "next start",
-        "vercel-build": "prisma generate && prisma db push deploy && next build",
+        "vercel-build": "prisma generate && prisma db push deploy && yarn partytown && next build",
+        "partytown": "partytown copylib public/~partytown",
         "prisma:generate": "npx prisma generate",
         "prisma:migrate": "prisma db push",
         "prisma:studio": "npx prisma studio",
@@ -15,17 +16,20 @@
         "lint:style:fix": "yarn run lint:style --fix",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
+        "rome": "npx rome check",
         "version": "auto-changelog -p && git add CHANGELOG.md"
     },
     "pre-commit": [
         "lint",
-        "prettier:check"
+        "prettier:check",
+        "lint:style"
     ],
     "keyword": "next.js",
     "author": "Mihails Fjodorovs <mf.mail.service@gmail.com>",
     "dependencies": {
         "@apollo/client": "^3.5.10",
         "@auth0/nextjs-auth0": "^1.9.2",
+        "@builder.io/partytown": "^0.7.1",
         "@contentful/rich-text-react-renderer": "^15.12.1",
         "@icons-pack/react-simple-icons": "^5.8.0",
         "@next-auth/mongodb-adapter": "^1.0.3",
@@ -61,6 +65,7 @@
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "prisma": "^4.5.0",
+        "rome": "^10.0.0",
         "stylelint": "^14.14.1",
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-prettier": "^9.0.3",
