--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prisma:migrate": "prisma db push",
         "prisma:studio": "npx prisma studio",
         "lint": "next lint",
-        "lint:style": "NODE_ENV=production stylelint './**/*.[s]css'",
+        "lint:style": "cross-env NODE_ENV=production stylelint './**/*.[s]css'",
         "lint:style:fix": "yarn run lint:style --fix",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
@@ -56,6 +56,7 @@
         "@trivago/prettier-plugin-sort-imports": "^3.3.0",
         "auto-changelog": "^2.4.0",
         "autoprefixer": "^10.4.7",
+        "cross-env": "^7.0.3",
         "eslint": "8.7.0",
         "eslint-config-next": "12.0.8",
         "eslint-config-prettier": "^8.5.0",
