--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,13 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 4
-indent_style = space
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{package.json,*.yml,*.md}]
+[{*.yml,*.md}]
 indent_size = 2
-indent_style = space
+indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
