--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,18 +1,20 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true,
-    "importOrder": [
-        "^(next/(.*)$)|^(next$)",
-        "<THIRD_PARTY_MODULES>",
-        "next-seo.config",
-        "^components/(.*)$",
-        "^utils/(.*)$",
-        "^assets/(.*)$",
-        "^@fontsource/(.*)$",
-        "^[./]"
-    ],
-    "importOrderSeparation": true,
-    "importOrderSortSpecifiers": true
+	"trailingComma": "es5",
+	"endOfLine": "lf",
+	"tabWidth": 4,
+	"useTabs": true,
+	"semi": false,
+	"singleQuote": true,
+	"importOrder": [
+		"^(next/(.*)$)|^(next$)",
+		"<THIRD_PARTY_MODULES>",
+		"next-seo.config",
+		"^components/(.*)$",
+		"^utils/(.*)$",
+		"^assets/(.*)$",
+		"^@fontsource/(.*)$",
+		"^[./]"
+	],
+	"importOrderSeparation": true,
+	"importOrderSortSpecifiers": true
 }
