--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"nodemailer": "^6.7.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hotjar": "^5.3.0",
 		"sass": "^1.49.0",
 		"sharp": "^0.29.3"
 	},
