--- a/package.json
+++ b/package.json
@@ -17,13 +17,9 @@
 		"prettier:check": "prettier --check .",
 		"prettier:fix": "prettier --write .",
 		"rome": "npx rome check",
-		"version": "auto-changelog -p && git add CHANGELOG.md"
+		"version": "auto-changelog -p && git add CHANGELOG.md",
+		"prepare": "husky install"
 	},
-	"pre-commit": [
-		"lint",
-		"prettier:check",
-		"lint:style"
-	],
 	"keyword": "next.js",
 	"author": "Mihails Fjodorovs <mf.mail.service@gmail.com>",
 	"dependencies": {
@@ -65,7 +61,6 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.8",
 		"postcss": "^8.4.14",
-		"pre-commit": "^1.2.2",
 		"prettier": "^2.7.1",
 		"prisma": "^4.8.0",
 		"rome": "^10.0.0",
@@ -74,7 +69,8 @@
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^6.1.0",
-		"tailwindcss": "^3.1.3"
+		"tailwindcss": "^3.1.3",
+		"husky": "^8.0.0"
 	},
 	"version": "2.10.25"
 }
