--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.8",
+		"husky": "^8.0.0",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prisma": "^4.8.0",
@@ -69,8 +70,7 @@
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^6.1.0",
-		"tailwindcss": "^3.1.3",
-		"husky": "^8.0.0"
+		"tailwindcss": "^3.1.3"
 	},
-	"version": "2.10.25"
+	"version": "2.11.26"
 }
