--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"email:dev": "email dev",
 		"build": "yarn partytown && next build",
 		"start": "next start",
 		"vercel-build": "prisma generate && prisma db push deploy && yarn partytown && next build",
@@ -29,6 +30,18 @@
 		"@contentful/rich-text-react-renderer": "^15.12.1",
 		"@icons-pack/react-simple-icons": "^5.8.0",
 		"@prisma/client": "^4.8.0",
+		"@react-email/button": "0.0.5",
+		"@react-email/container": "0.0.6",
+		"@react-email/head": "0.0.4",
+		"@react-email/hr": "0.0.4",
+		"@react-email/html": "0.0.3",
+		"@react-email/img": "0.0.4",
+		"@react-email/link": "0.0.4",
+		"@react-email/preview": "0.0.5",
+		"@react-email/render": "^0.0.6",
+		"@react-email/section": "0.0.6",
+		"@react-email/text": "0.0.4",
+		"@sendgrid/mail": "^7.7.0",
 		"@sentry/nextjs": "^7.28.1",
 		"apollo-server-micro": "^3.10.4",
 		"axios": "^0.25.0",
@@ -38,11 +51,12 @@
 		"logrocket": "^3.0.1",
 		"micro": "^9.4.1",
 		"mongodb": "^4.4.1",
+		"mongoose": "^6.9.0",
 		"next": "12.3.2",
 		"next-pwa": "^5.4.4",
-		"nodemailer": "^6.7.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-email": "1.7.2",
 		"react-hotjar": "^5.3.0",
 		"sass": "^1.49.0",
 		"sharp": "^0.29.3"
